--- a/templates/menu.html
+++ b/templates/menu.html
@@ -6,8 +6,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href=".">M.No2Bio</a>
-          <div class="nav-collapse collapse">
+          <a class="navbar-brand" href=".">m.No2Bio.org</a>
+          {{!
+            navbar-resonsive-collapse and the style are voodoo to make the navbar scrollable
+            See http://stackoverflow.com/questions/17561824/bootstrapfixed-nav-static-top-on-top-but-scrollable-nav-collapse#17580098
+          }}
+          <div class="nav-collapse collapse navbar-resonsive-collapse" style="overflow-y: scroll;max-height:400px">
             <ul class="nav navbar-nav">
               {{#items}}
                 {{^ismenu}}
