--- a/templates/post.html
+++ b/templates/post.html
@@ -23,6 +23,7 @@
         </div>
         <div class="row">
           <div class="span12">
+            {{#thumbnail}}<a href="#" class="thumbnaili pull-right"><img src="{{.}}" alt=""></a>{{/thumbnail}}
             {{{content}}}
           </div>
         </div>
