Adjusting to new bootstrap jargon :/

--- a/templates/post.html
+++ b/templates/post.html
@@ -17,12 +17,10 @@
       <!-- Begin page content -->
       <div class="container">
         <div class="page-header text-center">
-          <div class="span12">
-            <h2>{{title}}</h2>
-          </div>
+          <h2>{{title}}</h2>
         </div>
         <div class="row">
-          <div class="span12">
+          <div class="col-8 col-offset-2">
             {{#thumbnail}}<a href="#" class="thumbnaili pull-right"><img src="{{.}}" alt=""></a>{{/thumbnail}}
             {{{content}}}
           </div>
