--- a/templates/post.html
+++ b/templates/post.html
@@ -20,7 +20,7 @@
           <h2>{{title}}</h2>
         </div>
         <div class="row">
-          <div class="col-8 col-offset-2">
+          <div class="col-12">
             {{#thumbnail}}<a href="#" class="thumbnaili pull-right"><img src="{{.}}" alt=""></a>{{/thumbnail}}
             {{{content}}}
           </div>
