--- a/templates/menu.html
+++ b/templates/menu.html
@@ -1,17 +1,20 @@
       <!-- Fixed navbar -->
-      <div class="navbar navbar-fixed-top">
+      <div class="navbar navbar-fixed-top" role="nagivation">
         <div class="container">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href=".">m.No2Bio.org</a>
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#top-collapse-menu">
+              <!-- <span class="sr-only">Toggle navigation</span> -->
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href=".">m.No2Bio.org</a>
+          </div>
           {{!
             navbar-resonsive-collapse and the style are voodoo to make the navbar scrollable
             See http://stackoverflow.com/questions/17561824/bootstrapfixed-nav-static-top-on-top-but-scrollable-nav-collapse#17580098
           }}
-          <div class="nav-collapse collapse navbar-resonsive-collapse" style="overflow-y: scroll;max-height:400px">
+          <div id="top-collapse-menu" class="navbar-collapse collapse" style="overflow-y: scroll;max-height:400px">
             <ul class="nav navbar-nav">
               {{#items}}
                 {{^ismenu}}
