--- a/templates/menu.html
+++ b/templates/menu.html
@@ -10,11 +10,7 @@
             </button>
             <a class="navbar-brand" href=".">m.No2Bio.org</a>
           </div>
-          {{!
-            navbar-resonsive-collapse and the style are voodoo to make the navbar scrollable
-            See http://stackoverflow.com/questions/17561824/bootstrapfixed-nav-static-top-on-top-but-scrollable-nav-collapse#17580098
-          }}
-          <div id="top-collapse-menu" class="navbar-collapse collapse" style="overflow-y: scroll;max-height:400px">
+          <div id="top-collapse-menu" class="collapse nav-collapse">
             <ul class="nav navbar-nav">
               {{#items}}
                 {{^ismenu}}
