[hopefully] fix meu bugs

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -6,10 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <link href="css/bootstrap.rtl.min.css" rel="stylesheet" media="screen">
-    <link href="css/sticky-footer-navbar.rtl.css" rel="stylesheet">
-  <!-- <style type="text/css">
+    <!-- <link href="css/sticky-footer-navbar.rtl.css" rel="stylesheet"> -->
+<!--
+  <style type="text/css">
   body { padding-top: 50px; }
-  </style> -->
+  </style>
+-->
   </head>
   <body>
     <!-- Wrap all page content here -->
@@ -29,7 +31,7 @@
         <p align="center"><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/videoseries?list=PLD3C1ACEC3C8E423C&cc_lang_pref=he" frameborder="0" allowfullscreen></iframe></p>
       </div>
     </div>
-
+<!--
     <div id="footer">
       <div class="container">
         <p class="text-muted credit" dir="rtl">
@@ -38,7 +40,7 @@
         </p>
       </div>
     </div>
-
+-->
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
   </body>
