--- a/templates/menu.html
+++ b/templates/menu.html
@@ -1,5 +1,5 @@
       <!-- Fixed navbar -->
-      <div class="navbar navbar-fixed-top" role="nagivation">
+      <div class="navbar navbar-default" role="nagivation">
         <div class="container">
           <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#top-collapse-menu">
